fix: add spacing between headings on contact form

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -744,8 +744,6 @@ main {
 
 	&.contact-form {
 		h3 {
-			margin: 0;
-
 			+ p {
 				margin-block-start: 0;
 			}
